k8s/service-discovery/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-discovery
  labels:
    app: service-discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-discovery
  template:
    metadata:
      labels:
        app: service-discovery
    spec:
      containers:
      - name: service-discovery
        image: jacoboossag/service-discovery:dev
        ports:
        - containerPort: 8761
#        resources:
#          limits:
#            memory: "512Mi"
#            cpu: "250m"
#          requests:
#            memory: "256Mi"
#            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8761
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8761
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 3
